# geppetto

./: Cargo.toml  README.md
notes/: chapter2.md  chapter3.md  chapter4.md  chapter5.md
src/: custom_norm.rs  gpt.rs  lib.rs  tokenizer.rs  traits.rs
src/data/: dataset.rs  mod.rs  text_gen.rs  train.rs
src/gpt/: config.rs  mod.rs
src/transformer/: attention.rs  feed_forward.rs  mod.rs  norm.rs
