[package]
name = "geppetto"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
# tiktoken = { git = "https://github.com/openai/tiktoken", tag = "0.11.0" } # openai tokenizer
tiktoken-rs = "0.6.0"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = [
    "metal",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = [
    "metal",
] }
hf-hub = { git = "https://github.com/huggingface/hf-hub", version = "0.4.3" }
rand = "0.9.2"
